--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <base href="/">
+
+    <!-- Google --->
+
+    <script src="https://apis.google.com/js/platform.js"></script>
+    <meta name="google-signin-client_id" content="535291319140-jal02nmt10sh3s3nta5mrbje8g900cc1.apps.googleusercontent.com">
+
+
 </head>
 
 <body class="fix-header card-no-border fix-sidebar">
